erDiagram
    providers {
        int id PK "自增"
        string name UK "提供商名称"
    }

    users {
        uuid id PK "UUID"
        string username UK "用户名"
        string password_hash "密码哈希"
        string status "active"
        timestamptz last_login_at "最后登录"
        timestamptz created_at
        timestamptz updated_at
    }

    agent_templates {
        int id PK "自增"
        string name "模板名称"
        string description "描述"
        int default_provider_id FK "→providers"
        string system_prompt "系统提示词"
        json prompt_config "提示配置"
        json default_capabilities "默认能力"
        json default_model_config "默认模型配置"
        json metadata "元数据"
        agent_status status "enabled"
        timestamptz created_at
        timestamptz updated_at
    }

    agents {
        int id PK "自增"
        int template_id FK "→agent_templates"
        string name UK "Agent名称"
        string description "描述"
        int provider_id "→providers逻辑引用"
        bool is_default_orchestrator "默认编排者"
        agent_status status "offline"
        timestamptz created_at
        timestamptz updated_at
    }

    build_sessions {
        uuid id PK "UUID"
        string status "active"
        json context "构建上下文"
        int agent_template_id FK "→agent_templates(可选)"
        timestamptz created_at
        timestamptz updated_at
    }

    build_messages {
        uuid id PK "UUID"
        uuid build_session_id FK "→build_sessions CASCADE"
        string role "user assistant"
        string content "消息内容"
        timestamptz created_at
    }

    sessions {
        uuid id PK "UUID"
        string title "会话标题"
        session_status status "active"
        uuid project_id FK "→projects(可选)"
        string downstream_session_id "下游会话ID"
        json metadata "元数据"
        timestamptz created_at
        timestamptz updated_at
    }

    projects {
        uuid id PK "UUID"
        string name "项目名称"
        string github_url "GitHub地址"
        string default_branch "main"
        string status "active"
        json metadata "元数据"
        timestamptz created_at
        timestamptz updated_at
    }

    deployments {
        uuid id PK "UUID"
        uuid session_id FK "→sessions CASCADE"
        uuid project_id FK "→projects RESTRICT"
        uuid trigger_message_id "触发消息(可选)"
        string commit_sha "提交SHA"
        string status "queued"
        string deploy_service_job_id "部署任务ID"
        string url "部署URL"
        string error_message "错误信息"
        json metadata "元数据"
        timestamptz created_at
        timestamptz updated_at
        timestamptz completed_at "完成时间"
    }

    session_agents {
        uuid session_id PK "→sessions CASCADE"
        int agent_id PK "→agents CASCADE"
        string participant_role "member"
        string source "mention"
        timestamptz first_mentioned_at
        timestamptz last_active_at
        timestamptz created_at
    }

    messages {
        uuid id PK "UUID"
        uuid session_id FK "→sessions CASCADE"
        uuid run_id "→agent_runs(可选)"
        message_role role "user assistant agent"
        int agent_id FK "→agents(可选)"
        uuid parent_message_id "父消息(可选)"
        string content_text "文本内容"
        json content_json "JSON内容"
        int token_count "Token计数"
        message_status status "completed"
        bool is_pinned "是否置顶"
        timestamptz created_at
        timestamptz updated_at
    }

    context_snapshots {
        uuid id PK "UUID"
        uuid session_id FK "→sessions CASCADE"
        uuid run_id "关联Run(可选)"
        int version "快照版本"
        int token_budget "Token预算"
        int token_count "Token用量"
        strings selected_item_ids "选中上下文项"
        json snapshot_json "快照JSON"
        string prompt_text "提示词文本"
        timestamptz created_at
    }

    agent_runs {
        uuid id PK "UUID"
        uuid session_id FK "→sessions CASCADE"
        int orchestrator_agent_id FK "→agents RESTRICT"
        uuid user_message_id "用户消息"
        uuid assistant_message_id "助手消息"
        uuid context_snapshot_id "上下文快照"
        run_status status "queued"
        string downstream_session_id "下游会话"
        string downstream_run_id "下游Run"
        string error_code "错误码"
        string error_message "错误信息"
        json usage_json "用量统计"
        timestamptz started_at "开始时间"
        timestamptz completed_at "完成时间"
        timestamptz created_at
        timestamptz updated_at
    }

    agent_events {
        uuid id PK "UUID"
        uuid session_id FK "→sessions CASCADE"
        uuid run_id FK "→agent_runs CASCADE"
        bigint seq "事件序号"
        string source "downstream_agent"
        string event_type "事件类型"
        string visibility "public"
        int speaker_agent_id FK "→agents(可选)"
        string speaker_name "发言人名称"
        json payload "事件负载"
        timestamptz occurred_at "发生时间"
        timestamptz persisted_at "持久化时间"
    }

    artifacts {
        uuid id PK "UUID"
        uuid session_id FK "→sessions CASCADE"
        uuid run_id FK "→agent_runs(可选)"
        uuid producing_event_id "生成事件(可选)"
        string artifact_key "制品Key(可选)"
        artifact_kind kind "markdown pdf pptx"
        string title "制品标题"
        string mime_type "MIME类型"
        storage_kind storage_kind "inline_text"
        string storage_uri "存储URI"
        string text_content "文本内容"
        string sha256 "哈希"
        bigint size_bytes "文件大小"
        int version "版本号"
        bool final "是否最终版"
        json metadata "元数据"
        timestamptz created_at
        timestamptz updated_at
    }

    artifact_versions {
        uuid id PK "UUID"
        uuid artifact_id FK "→artifacts CASCADE"
        int version "版本号"
        uuid producing_event_id "生成事件"
        string title "标题"
        artifact_kind kind "制品类型"
        string mime_type "MIME类型"
        storage_kind storage_kind "存储方式"
        string storage_uri "存储URI"
        string text_content "文本内容"
        string sha256 "哈希"
        bigint size_bytes "文件大小"
        bool final "是否最终版"
        json metadata "元数据"
        timestamptz created_at
    }

    file_changes {
        uuid id PK "UUID"
        uuid session_id FK "→sessions CASCADE"
        uuid run_id FK "→agent_runs CASCADE"
        uuid artifact_id FK "→artifacts(可选)"
        uuid producing_event_id "生成事件"
        string path "文件路径"
        string old_path "旧路径(重命名)"
        file_change_type change_type "added modified deleted"
        string language "编程语言"
        string before_content "修改前内容"
        string before_sha256 "修改前哈希"
        bool before_truncated "before截断"
        string after_content "修改后内容"
        string after_sha256 "修改后哈希"
        bool after_truncated "after截断"
        string patch "Diff补丁"
        json stats "变更统计"
        json metadata "元数据"
        timestamptz created_at
    }

    context_items {
        uuid id PK "UUID"
        uuid session_id FK "→sessions CASCADE"
        string source_type "来源类型"
        uuid source_id "来源ID"
        context_item_kind kind "message artifact file_change"
        string text "文本内容"
        int token_count "Token计数"
        int importance "重要性"
        bool pinned "是否置顶"
        json metadata "元数据"
        timestamptz created_at
        timestamptz updated_at
    }

    context_embeddings {
        uuid id PK "UUID"
        uuid context_item_id FK "→context_items CASCADE"
        uuid session_id FK "→sessions CASCADE"
        string model "嵌入模型"
        int dims "维度1536"
        vector embedding "向量1536"
        timestamptz created_at
    }

    context_update_jobs {
        uuid id PK "UUID"
        uuid session_id FK "→sessions CASCADE"
        string reason "触发原因"
        string status "pending"
        string error_message "错误信息"
        timestamptz created_at
        timestamptz started_at
        timestamptz completed_at
    }

    long_term_summaries {
        uuid id PK "UUID"
        uuid session_id FK "→sessions CASCADE"
        int seq "摘要序号"
        string content "摘要内容"
        int token_count "Token计数"
        timestamptz created_at
    }

    %% ===== 关系定义 =====
    providers ||--o{ agent_templates : "default_provider_id"
    agent_templates ||--o{ agents : "template_id"
    agent_templates ||--o{ build_sessions : "agent_template_id"
    build_sessions ||--o{ build_messages : "build_session_id"

    agents ||--o{ session_agents : "agent_id"
    sessions ||--o{ session_agents : "session_id"

    sessions ||--o{ messages : "session_id"
    agents ||--o{ messages : "agent_id"

    sessions ||--o{ agent_runs : "session_id"
    agents ||--o{ agent_runs : "orchestrator_agent_id"

    agent_runs ||--o{ agent_events : "run_id"
    sessions ||--o{ agent_events : "session_id"
    agents ||--o{ agent_events : "speaker_agent_id"

    sessions ||--o{ artifacts : "session_id"
    agent_runs ||--o{ artifacts : "run_id"
    artifacts ||--o{ artifact_versions : "artifact_id"

    sessions ||--o{ file_changes : "session_id"
    agent_runs ||--o{ file_changes : "run_id"
    artifacts ||--o{ file_changes : "artifact_id"

    sessions ||--o{ context_snapshots : "session_id"
    sessions ||--o{ context_items : "session_id"
    sessions ||--o{ context_embeddings : "session_id"
    sessions ||--o{ context_update_jobs : "session_id"
    sessions ||--o{ long_term_summaries : "session_id"

    context_items ||--o{ context_embeddings : "context_item_id"

    projects ||--o{ sessions : "project_id"
    projects ||--o{ deployments : "project_id"
    sessions ||--o{ deployments : "session_id"
